@@ -422,13 +422,9 @@ string Manager::GetFileID(const analyzer::Tag& tag, Connection* c, bool is_orig)
 	DBG_LOG(DBG_FILE_ANALYSIS, "Raise get_file_handle() for protocol analyzer %s",
 		analyzer_mgr->GetComponentName(tag).c_str());
 
-	EnumVal* tagval = tag.AsEnumVal();
+	const auto& tagval = tag.AsVal();
 
-	mgr.Enqueue(get_file_handle,
-		IntrusivePtr{NewRef{}, tagval},
-		c->ConnVal(),
-		val_mgr->Bool(is_orig)
-	);
+	mgr.Enqueue(get_file_handle, tagval, c->ConnVal(), val_mgr->Bool(is_orig));
 	mgr.Drain(); // need file handle immediately so we don't have to buffer data
 	return current_file_id;
 	}
