@@ -8,7 +8,7 @@ using namespace file_analysis;
 const file_analysis::Tag file_analysis::Tag::Error;
 
 file_analysis::Tag::Tag(type_t type, subtype_t subtype)
-	: ::Tag(file_mgr->GetTagEnumType(), type, subtype)
+	: ::Tag(file_mgr->GetTagType(), type, subtype)
 	{
 	}
 
@@ -18,7 +18,20 @@ file_analysis::Tag& file_analysis::Tag::operator=(const file_analysis::Tag& othe
 	return *this;
 	}
 
+const IntrusivePtr<EnumVal>& file_analysis::Tag::AsVal() const
+	{
+	return ::Tag::AsVal(file_mgr->GetTagType());
+	}
+
 EnumVal* file_analysis::Tag::AsEnumVal() const
 	{
-	return ::Tag::AsEnumVal(file_mgr->GetTagEnumType());
+	return AsVal().get();
 	}
+
+file_analysis::Tag::Tag(IntrusivePtr<EnumVal> val)
+	: ::Tag(std::move(val))
+	{ }
+
+file_analysis::Tag::Tag(EnumVal* val)
+	: ::Tag({NewRef{}, val})
+	{ }
