@@ -68,7 +68,8 @@ function Files::__stop%(file_id: string%): bool
 ## :zeek:see:`Files::analyzer_name`.
 function Files::__analyzer_name%(tag: Files::Tag%) : string
 	%{
-	return make_intrusive<StringVal>(file_mgr->GetComponentName(tag));
+	const auto& n = file_mgr->GetComponentName(IntrusivePtr{NewRef{}, tag->AsEnumVal()});
+	return make_intrusive<StringVal>(n);
 	%}
 
 ## :zeek:see:`Files::file_exists`.
