@@ -6,7 +6,7 @@
 const input::Tag input::Tag::Error;
 
 input::Tag::Tag(type_t type, subtype_t subtype)
-	: ::Tag(input_mgr->GetTagEnumType(), type, subtype)
+	: ::Tag(input_mgr->GetTagType(), type, subtype)
 	{
 	}
 
@@ -16,7 +16,20 @@ input::Tag& input::Tag::operator=(const input::Tag& other)
 	return *this;
 	}
 
+const IntrusivePtr<EnumVal>& input::Tag::AsVal() const
+	{
+	return ::Tag::AsVal(input_mgr->GetTagType());
+	}
+
 EnumVal* input::Tag::AsEnumVal() const
 	{
-	return ::Tag::AsEnumVal(input_mgr->GetTagEnumType());
+	return AsVal().get();
 	}
+
+input::Tag::Tag(IntrusivePtr<EnumVal> val)
+	: ::Tag(std::move(val))
+	{ }
+
+input::Tag::Tag(EnumVal* val)
+	: ::Tag({NewRef{}, val})
+	{ }
